[tool.poetry]
name = "ubuntu-ranking-dataset-creator"
version = "0.1.0"
description = ""
authors = ["BitJockey <bitjockey@jackpoint.network>"]

[tool.poetry.dependencies]
python = "^3.6"
six = "^1.14.0"
unicodecsv = "^0.14.1"
nltk = "^3.4.5"
future = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
